<resources>
    <string name="app_name">Academy_LIS-M</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_input">заповніть дані</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Реєстрація</string>
    <string name="koristuvach">Користувач</string>
    <string name="parol">Пароль</string>
    <string name="posivnoi">Позивний</string>
    <string name="patrol">Патруль</string>
    <string name="telephone">Телефон</string>
    <string name="pidrozdil">Підрозділ</string>
    <string name="sluzba">Служба</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="search_osoba">Особа</string>
    <string name="search_nomerni_rechi">Номерні речі</string>
    <string name="search_garpun">Гарпун</string>
    <string name="search_interpol">Інтерпол</string>
    <string name="search_dozvil_bdr">Дозвіл БДР</string>
    <string name="search_adminpostanova">Адмін-постанова</string>
    <string name="search_adminpostanova_gb">Адмін-постанова ГБ</string>
    <string name="search_drager">Драгер</string>
    <string name="search_zatrimani_tz">Затримані ТЗ</string>
    <string name="search_poi">POI</string>
    <string name="search_mtsbu">МТСБУ</string>
    <string name="search_posvidchenya_vodiya">Посвідчення водія</string>
    <string name="search_avtotransport">Автотранспорт</string>
    <string name="search_zvit">Звіти</string>
    <string name="search_algoritm">Алгоритми</string>
    <string name="search_zakonodavstvo">Законодавство</string>
    <string name="search_test_photo">Тест фото</string>
    <string name="search_poruchenya_pdr">Порушення ПДР</string>
    <string name="search_poisk_ipnp">Пошук ІПНП</string>
    <string name="search_ipnp">ІПНП</string>
    <string name="prichina">Причина</string>
    <string name="prichina1">Причина:</string>

    <string name="lis_m">LIS-M</string>
    <string name="status_zavdanya_vidsutniy">(Статус завдання: - відсутній)</string>
    <string name="task_PATRUL">ПАТРУЛЬ</string>
    <string name="task_posivnoy">Позивний:</string>
    <string name="task_patrul">Патруль:</string>
    <string name="task_kotistuvach">Користувач:</string>
    <string name="task_telephone">Телефон:</string>
    <string name="task_teritoriya">Територія:</string>
    <string name="task_btn_zavdanya">Завдання</string>
    <string name="panel_zadach">Панель задач</string>
    <string name="poisk_avtotransporta">Пошук автотранспорту</string>
    <string name="poisk_avto_text">пошук за точним співпадінням, без використання символів маски (*,?,%,_)</string>
    <string name="btn_poisk_znaiti">Знайти</string>
    <string name="btn_poisk_derg_nomer">Держ.номер</string>
    <string name="btn_poisk_vin_kod">VIN код</string>
    <string name="search_nomerni_rechi_panel">Пошук номерних речей</string>
    <string name="nomerni_rechi_lico">Лицо</string>
    <string name="nomerni_rechi_utrata">Утрата</string>
    <string name="task_status">Статус патруля</string>
    <string name="noZavdan">Немає поточних завдань !</string>
    <string name="prinyav">Прийняв</string>
    <string name="pribuv">Прибув</string>
    <string name="vikonav">Виконав</string>

    <string name="home_koristuvach_">Слухач</string>
    <string name="home_teritoriya">Академія ПП м.Київ</string>
    <string name="home_time">08:00 – 08:00</string>
    <string name="reestraciya">Реєстрація</string>
    <string name="search_koristuvach">Користувач: Слухач</string>
    <string name="no_documents">Документи не знайдено</string>
    <string name="TZ_ta_NZ_rozchuk">ТЗ та НЗ, що розшукуються</string>
    <string name="dani_garpun_defolt">Держ. номер - вказується повністю.\nНомер ТЗ - вводиться не менше 5 останіх\nцифир номера кузова/двигуна/шасі.</string>

    <!-- Призвище ім'я по батькові рік народження -->
    <string name="prizviche">Прізвище</string>
    <string name="imya">Ім\'я</string>
    <string name="pobatkovi">По батькові</string>
    <string name="rik_narodzenya">Рік народження</string>


    <!-- Пошук очистка -->
    <string name="clear">Очистити</string>
    <string name="search">Пошук</string>


    <!-- Текст пошук особи -->
    <string name="dani_osoba_defolt">(дані про особу вводяться рос.мовою)\n Обов\'язкові для заповнення - Фамилия, Имя\n Скорочення не допускаються</string>

    <!-- Текст пошук номерних речей -->
    <string name="dani_nomerni_rechi_defolt">Якщо відома тільки частина номеру, потрібно\nдобавляти символи обриву (* або %)\nНаприклад:\n137* (шукати номер, що починається на 137),\n*245 (шукати номер, що закінчується на 245),\n*091* (шукати номер, в якому зустрічається\nнабір символів 091)</string>


    <string-array name="posivnoi">
        <item>ГРАНТ-0504</item>
        <item>ГРАНТ-0505</item>
        <item>ГРАНТ-0506</item>
        <item>ГРАНТ-0507</item>
        <item>Д-ГРАНТ0201</item>
        <item>Д-ГРАНТ0202</item>
        <item>Д-ГРАНТ0203</item>
        <item>Д-ГРАНТ0204</item>
        <item>Д-ГРАНТ0205</item>
    </string-array>

    <string-array name="patrol">
        <item>SKODA</item>
        <item>TOYOTA PRIUS</item>
        <item>VOLKSWAGEN</item>
        <item>Ланос</item>
        <item>GEELY</item>
        <item>MAZDA E2200</item>
        <item>ISUZU D-MAX</item>
    </string-array>

    <string-array name="richenya">
        <item> </item>
        <item>Інформація не підтвердилася </item>
        <item>відсутній заявник</item>
        <item>відсутня подія</item>
        <item>відсутні наслідки</item>
        <item>інше: інформація не підтвердилася</item>
        <item>Прийнято рішення на місці події</item>
        <item>складено адміністративний протокол</item>
        <item>евакуація авто з складенням адмінпротоколу</item>
        <item>складено постанову про адмін.правопорушення</item>
        <item>проведено профілактичну бесіду</item>
        <item>надано роз яснення</item>
        <item>надано допомогу</item>
        <item>вичерпання конфлікту</item>
        <item>прийнято інше рішення на місці події</item>
        <item>Службове завдання</item>
        <item>Особа присутння</item>
        <item>Особа відсутння</item>
        <item>Інше</item>
        <item>Інформація потребує додаткового розгляду</item>
        <item>Відомості кримінального характеру</item>
        <item>Інший результат</item>
    </string-array>

    <string-array name="kvalifikaciya">
        <item>ЗЛОЧИН</item>
        <item>ВБИВСТВО</item>
        <item>ТЯЖКІ ТІЛЕМНІ УШКОДЖЕННЯ</item>
        <item>СЕКСУАЛЬНЕ НАСИЛЬСТВО</item>
        <item>ЗГВАЛТУВАННЯ</item>
        <item>РОЗБЕЩЕННЯ НЕПОВНОЛІТНІХ</item>
        <item>РОЗБІЙ</item>
        <item>ЗАВОЛОДІННЯ ТРАНСПОРТНИМ ЗАСОБОМ</item>
        <item>ГРАБІЖ</item>
        <item>САМОПРАВСТВО</item>
        <item>ПОВІДОМЛЕННЯ ПРО РЕЙДКРСЬКЕ ЗАХОПЛЕННЯ</item>
        <item>КРАДІЖКА ЗБРОЇ, БОЄПРИПАСІВ І ВИБУХІВКИ</item>
        <item>НЕЗАКОНЕ ПРОНИКНЕННЯ ДО ЖИТЛА</item>
        <item>ДТП без потерпілих</item>
        <item>ЛЕЖИТЬ НЕВІДОМА ОСОБА</item>
        <item>ПОКУСАЛА СОБАКА</item>
        <item>КРАДІЖКА</item>
        <item>КРАДІЖКА З АВТО</item>
        <item>КРАДІЖКА З КВАРТИРИ</item>
        <item>ТОРГІВЛЯ ЛЮДЬМИ</item>
        <item>ІНШІ ТІЛЕСНІ УШКОДЖЕННЯ</item>
        <item>ХУЛІГАНСТВО</item>
        <item>НАРУГА НАД МОГИЛОЮ</item>
    </string-array>


    <string-array name="prichina">
        <item> </item>
        <item>ЗАЯВНИК</item>
        <item>ОФОРМЛЕННЯ АДМІНМАТЕРІАЛІВ</item>
        <item>ПІДОЗРІЛА ОСОБА</item>
        <item>ПІДОЗРІЛИЙ ТРАНСПОРТНИЙ ЗАСІБ</item>
        <item>ОРІЄНТУВАННЯ</item>
        <item>ПОРУШЕННЯ ПДР</item>
        <item>ПОРУШЕННЯ ГБ</item>
        <item>ПЕРЕВІРКА ДОКУМЕНТІВ</item>
        <item>ПРИВАТНЕ ПЕРЕВЕЗЕННЯ НА АВТО В НОЧІ</item>
        <item>СЕКСУАЛЬНІ ПОСЛУГИ НА АТОШЛЯХАХ</item>
        <item>АВТОТРАНСПОРТ МАЄ ОЗНАКИ БЕЗГОСПОДАРНОГО</item>
        <item>АТОТРАНСПОРТ МАЄ ОЗНАКИ ДТП</item>
        <item>ПІДОЗРА У СКОЄННІ ЗЛОЧИНУ</item>
        <item>ІНШЕ</item>
    </string-array>
</resources>