<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.tab.task.RegistrationFragment">
    <LinearLayout
        android:id="@+id/registr_panel_reistraciya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registr_panel_ifo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="3dp"
            android:background="@drawable/inform"/>

        <TextView
            android:id="@+id/registr_panel_reistraciya_text"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/reestraziya"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/registration"
            android:textColor="#0800FB"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registr_panel_exit_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="3dp"
            android:background="@drawable/button_exit" />
    </LinearLayout>

    <TextView
        android:id="@+id/registr_koristuvach_text"
        style="@style/Registr_bok_tex"
        android:layout_marginTop="10dp"
        android:text="@string/koristuvach"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registr_panel_reistraciya" />

    <TextView
        android:id="@+id/registr_parol_text"
        style="@style/Registr_bok_tex"
        android:text="@string/parol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registr_koristuvach_text" />

    <TextView
        android:id="@+id/registr_posivnoi_text"
        style="@style/Registr_bok_tex"
        android:text="@string/posivnoi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registr_parol_text" />

    <TextView
        android:id="@+id/registr_patrol_text"
        style="@style/Registr_bok_tex"
        android:text="@string/patrol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registr_posivnoi_text" />

    <TextView
        android:id="@+id/registr_telephone_text"
        style="@style/Registr_bok_tex"
        android:text="@string/telephone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registr_patrol_text" />

    <TextView
        android:id="@+id/registr_sluzba_text"
        style="@style/Registr_bok_tex"
        android:layout_marginTop="20dp"
        android:text="@string/sluzba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registr_telephone_text" />

    <TextView
        android:id="@+id/registr_pidrozdil_text"
        style="@style/Registr_bok_tex"
        android:text="@string/pidrozdil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registr_sluzba_text" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="registr_koristuvach_text,registr_parol_text,
registr_posivnoi_text,registr_patrol_text,registr_telephone_text,registr_sluzba_text,
registr_pidrozdil_text" />

    <EditText
        android:id="@+id/task_user_edit"
        style="@style/Registr_edit_tex"
        android:layout_marginTop="10dp"
        android:hint="@string/user"
        android:maxLength="23"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/registr_koristuvach_text"
        app:layout_constraintTop_toBottomOf="@+id/registr_panel_reistraciya" />

    <EditText
        android:id="@+id/task_password_edit"
        style="@style/Registr_edit_tex"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="23"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/barrier_text"
        app:layout_constraintTop_toBottomOf="@+id/task_user_edit" />

    <Spinner
        android:id="@+id/posivnoi_spisok"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/gradient_spiner"
        android:entries="@array/posivnoi"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/barrier_text"
        app:layout_constraintTop_toBottomOf="@+id/task_password_edit" />

    <Spinner
        android:id="@+id/patrul_spisok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/gradient_spiner"
        android:entries="@array/patrol"
        app:layout_constraintStart_toEndOf="@+id/barrier_text"
        app:layout_constraintTop_toBottomOf="@+id/posivnoi_spisok" />

    <EditText
        android:id="@+id/task_patrul_nomer_edit"
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:layout_margin="4dp"
        android:background="@drawable/edit_text"
        android:hint="Номер"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/patrul_spisok"
        app:layout_constraintTop_toBottomOf="@+id/posivnoi_spisok" />

    <EditText
        android:id="@+id/task_phone_edit"
        style="@style/Registr_edit_tex"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="phone"
        android:maxLength="13"
        app:layout_constraintStart_toEndOf="@+id/barrier_text"
        app:layout_constraintTop_toBottomOf="@id/task_patrul_nomer_edit" />

    <TextView
        android:id="@+id/task_sluzba_edit_false"
        style="@style/Registr_edit_tex"
        android:layout_marginTop="23dp"
        android:backgroundTint="@color/blue_light"
        android:editable="false"
        android:ems="10"
        android:hint="APP"
        android:maxLength="10"
        app:layout_constraintStart_toEndOf="@+id/barrier_text"
        app:layout_constraintTop_toBottomOf="@id/registr_telephone_text" />

    <TextView
        android:id="@+id/registr_pidrozdil_edit_false"
        style="@style/Registr_edit_tex"
        android:backgroundTint="@color/blue_light"
        android:editable="false"
        android:ems="10"
        android:hint="ДУ_АПП "
        android:maxLength="10"
        app:layout_constraintStart_toEndOf="@+id/barrier_text"
        app:layout_constraintTop_toBottomOf="@id/task_sluzba_edit_false"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="start"
        app:constraint_referenced_ids="registr_pusk_button,registr_clear_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registr_pusk_button"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn"
        android:text="Застосувати"
        android:layout_marginEnd="5dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registr_panel_reistraciya" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registr_clear_button"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn"
        android:text="Відміна"
        android:textAllCaps="false"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registr_pusk_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registr_exit_button"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:background="@drawable/exit"
        android:text="Вихід"
        android:layout_margin="5dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>